apps/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:4.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /app/user-data/conf.yml
              subPath: conf.yml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: dashy-config
