apps/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dashy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
